force-app/main/default/objects/Message_Read_State__c/Message_Read_State__c.object-meta.xml
<CustomObject>
    <label>留言读取状态</label>
    <nameField>
        <displayFormat>MRS-{YYYYMMDD}-{00000000}</displayFormat>
        <label>留言读取状态编号</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>留言读取状态</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>