force-app/main/default/objects/Message_Read_State__c/fields/Shop_Message_Board__c.field-meta.xml
<CustomField>
    <fullName>Shop_Message_Board__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>留言板</label>
    <referenceTo>Shop_Message_Board__c</referenceTo>
    <relationshipLabel>留言读取状态</relationshipLabel>
    <relationshipName>Shop_Message_Board</relationshipName>
    <type>Lookup</type>
</CustomField>