force-app/main/default/objects/Message_Read_State__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>状态</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>未读</fullName>
            </value>
            <value>
                <fullName>已读</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>