force-app/main/default/objects/Message_Read_State__c/fields/Target_User__c.field-meta.xml
<CustomField>
    <fullName>Target_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>目标用户</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Target_User</relationshipName>
    <type>Lookup</type>
</CustomField>